# spark-ml-pipeline

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/features/user_features/: .part-00000-7113ebdb-b117-4286-a503-469e54b3fa9b-c000.snappy.parquet.crc  .part-00000-77437c84-d1ba-402c-a154-a42df1ae8bc7-c000.snappy.parquet.crc  .part-00001-7113ebdb-b117-4286-a503-469e54b3fa9b-c000.snappy.parquet.crc  .part-00001-77437c84-d1ba-402c-a154-a42df1ae8bc7-c000.snappy.parquet.crc  .part-00002-7113ebdb-b117-4286-a503-469e54b3fa9b-c000.snappy.parquet.crc  part-00000-7113ebdb-b117-4286-a503-469e54b3fa9b-c000.snappy.parquet  (+10 more)
models/: metrics_gbt_20260503_151930.json  metrics_gbt_20260505_220624.json  metrics_gbt_20260509_003146.json  metrics_gbt_20260509_003229.json  metrics_gbt_20260509_005310.json  metrics_gbt_20260509_005403.json  metrics_gbt_20260509_005447.json  metrics_gbt_20260510_013359.json  metrics_gbt_20260510_024213.json  metrics_gbt_20260510_024911.json  metrics_gbt_20260510_190029.json  metrics_gbt_20260510_190502.json  metrics_gbt_20260510_191244.json  metrics_gbt_20260510_192326.json  metrics_gbt_20260510_192745.json
src/batch/: ingest.py  join_data.py  query_partition.py  read_parquet.py  transform.py
src/config/: constants.py  schema.py
src/delta/: delta_ops.py  delta_writer.py
src/features/: eda.py  feature_engineering.py
src/ml/: pipeline.py  train.py
src/monitoring/: drift_detector.py  monitor.py  retrain_trigger.py
src/streaming/: data_generator.py  stream_predict.py
src/utils/: debug_utils.py  spark_optimizer.py  spark_session.py
(+943 files in other folders)
