[project]
name = "spark-ml-project"
version = "0.1.0"
description = "Production-grade Spark ML pipeline project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "findspark>=2.0.1",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "delta-spark==3.2.0",
    "pyspark==3.5.3",
]
